added auth/login in routes

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,4 @@ PORT=8000
 DB_USER=admin
 DB_PASSWORD=adi30013763
 DB_NAME=mern-musicblog
+JWT_SECRET=aildjalihfaihf9ou14901uiah19u01928u498hfoiah891hr
